--- a/src/_base.scss
+++ b/src/_base.scss
@@ -1,3 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Bitter&display=swap');
 
 $font-title: 'Bitter', serif;
+$font-paragraph: 'Raleway', sans-serif;
+
+$media-break-point-tablet: 850px;
+$media-break-point-phone: 500px;
+$media-break-point-computer-small: 1000px;
+$media-break-point-computer-large: 2000px;
