--- a/src/Components/NavList/NavList.module.scss
+++ b/src/Components/NavList/NavList.module.scss
@@ -3,14 +3,22 @@
 .container {
   position: fixed;
   display: flex;
+  right: 0;
+  top: 0;
   flex-direction: column;
   justify-content: center;
-  height: 100%;
+  height: 100vh;
   width: 100vw;
 }
 
 @media (min-width: $media-break-point-phone) {
   .container {
     width: 50vw;
+  }
+}
+
+@media (min-width: $media-break-point-computer-small) {
+  .container {
+    width: 20rem;
   }
 }
