--- a/src/Containers/MobileNav/MobileNav.module.scss
+++ b/src/Containers/MobileNav/MobileNav.module.scss
@@ -1,11 +1,7 @@
 @import '../../base';
 
 .container {
-  position: fixed;
-  right: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
+  display: block;
 }
 
 .menu {
