Add ProjectsPage with basic ProjectCards

--- a/src/_base.scss
+++ b/src/_base.scss
@@ -9,3 +9,4 @@ $media-break-point-computer-small: 1000px;
 $media-break-point-computer-large: 2000px;
 
 $colour-primary: rgb(212, 96, 0);
+$colour-secondary: rgb(79, 55, 97);
