--- a/src/Components/NavList/NavItem/NavItem.module.scss
+++ b/src/Components/NavList/NavItem/NavItem.module.scss
@@ -1,15 +1,16 @@
 @import '../../../base';
 
 .container {
+  z-index: 1;
   display: flex;
-  width: 100%;
+  width: 100vw;
   height: 4rem;
   background-color: rgba(255, 255, 255, 0.95);
   border: 1px solid #000;
   align-items: center;
   justify-content: space-between;
   text-decoration: none;
-  transform: translateX(0);
+  transform: translateX(-100vw);
   transition-property: transform;
   transition-duration: 1s;
 
@@ -56,7 +57,7 @@
 
 @media (min-width: $media-break-point-computer-small) {
   .container {
-    transform: translateX(15rem);
+    transform: translateX(-5rem);
     transition-duration: 0.5s;
     justify-content: flex-start;
 
@@ -65,7 +66,7 @@
     }
 
     &:hover {
-      transform: translateX(0);
+      transform: translateX(-20rem);
     }
   }
 }
