--- a/src/Components/NavList/NavList.module.scss
+++ b/src/Components/NavList/NavList.module.scss
@@ -1,6 +1,7 @@
 @import '../../base';
 
 .container {
+  z-index: 1;
   position: fixed;
   display: flex;
   right: 0;
@@ -8,17 +9,17 @@
   flex-direction: column;
   justify-content: center;
   height: 100vh;
-  width: 100vw;
+  width: 0vw;
 }
 
-@media (min-width: $media-break-point-phone) {
-  .container {
-    width: 50vw;
-  }
-}
+// @media (min-width: $media-break-point-phone) {
+//   .container {
+//     width: 50vw;
+//   }
+// }
 
-@media (min-width: $media-break-point-computer-small) {
-  .container {
-    width: 20rem;
-  }
-}
+// @media (min-width: $media-break-point-computer-small) {
+//   .container {
+//     width: 20rem;
+//   }
+// }
