--- a/src/Containers/ProjectsPage/ProjectsPage.module.scss
+++ b/src/Containers/ProjectsPage/ProjectsPage.module.scss
@@ -1,35 +1,77 @@
 @import '../../base';
 
 .container {
-  padding: 3rem 0;
+  padding-bottom: 4rem;
+}
+
+.landing {
+  min-height: 90vh;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.landing::before {
+  z-index: -1;
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: -50vw;
+  bottom: 0;
+  width: 150vw;
+  overflow: hidden;
+  background-color: $colour-primary;
+  opacity: 0.75;
 }
 
 .title {
   font-size: 3rem;
-  color: $colour-primary;
-  margin-bottom: 2rem;
+  padding: 3rem 0;
+  position: relative;
+  color: #fff;
+}
+
+.title::before {
+  z-index: -1;
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: -50vw;
+  bottom: 0;
+  width: 150vw;
+  overflow: hidden;
+  background-color: $colour-primary;
 }
 
 .para {
+  margin: 0 0 2rem 0;
+  font-size: 1.2rem;
+  color: #fff;
   max-width: 65ch;
+  margin-bottom: 3rem;
 }
 
 .cardContainer {
   margin: auto;
   margin-top: 3rem;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(13rem, 1fr));
   grid-template-rows: auto;
   column-gap: 1.5rem;
   row-gap: 1.5rem;
 }
 
 .filter {
+  position: relative;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   width: 100%;
-  padding: 1rem;
-  border: 1px solid #000;
-  background-color: rgba(255, 255, 255, 0.7);
+  height: 100%;
+  padding: 3rem 0;
 }
 
 .filter_form {
@@ -38,6 +80,7 @@
   label {
     font-family: $font-title;
     font-size: 1.5rem;
+    color: #fff;
   }
 }
 
@@ -46,6 +89,8 @@
   margin: 1rem 0 0 0;
   padding: 0.5rem 1rem;
   font-size: 1.1rem;
+  color: #fff;
+  background-color: $colour-primary;
 }
 
 .filter_labelContainer {
