Add skills and education and contact pages

--- a/src/_base.scss
+++ b/src/_base.scss
@@ -10,3 +10,6 @@ $media-break-point-computer-large: 2000px;
 
 $colour-primary: rgb(212, 96, 0);
 $colour-secondary: rgb(79, 55, 97);
+$colour-green: rgb(38, 126, 100);
+$colour-blue: rgb(58, 78, 131);
+$colour-dark-grey: #333;
