Move project data to json file

--- a/src/Containers/AboutPage/AboutPage.module.scss
+++ b/src/Containers/AboutPage/AboutPage.module.scss
@@ -35,7 +35,7 @@
   bottom: 0;
   width: 150vw;
   overflow: hidden;
-  background-color: $colour-secondary;
+  background-color: $colour-purple;
   opacity: 0.75;
 }
 
@@ -56,7 +56,7 @@
   bottom: 0;
   width: 150vw;
   overflow: hidden;
-  background-color: $colour-secondary;
+  background-color: $colour-purple;
 }
 
 .section {
