--- a/src/Containers/ProjectsPage/ProjectCard/ProjectCard.module.scss
+++ b/src/Containers/ProjectsPage/ProjectCard/ProjectCard.module.scss
@@ -47,7 +47,7 @@
 }
 
 .card_back {
-  background-color: $colour-secondary;
+  background-color: $colour-primary;
   color: white;
   transform: rotateY(180deg);
 }
