--- a/src/Containers/TechnicalPage/TechnicalPage.module.scss
+++ b/src/Containers/TechnicalPage/TechnicalPage.module.scss
@@ -62,6 +62,7 @@
 
 .skills_section {
   background-color: $colour-primary;
+  opacity: 0.9;
   box-shadow: 10px 6px 8px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
