--- a/src/_base.scss
+++ b/src/_base.scss
@@ -10,6 +10,8 @@ $media-break-point-computer-large: 2000px;
 
 $colour-primary: rgb(212, 96, 0);
 $colour-secondary: rgb(79, 55, 97);
-$colour-green: rgb(38, 126, 100);
-$colour-blue: rgb(58, 78, 131);
+$colour-purple: rgb(92, 64, 95);
+$colour-red: rgb(49, 41, 41);
+$colour-green: rgb(55, 116, 97);
+$colour-blue: rgb(61, 72, 102);
 $colour-dark-grey: #333;
