--- a/src/_base.scss
+++ b/src/_base.scss
@@ -9,9 +9,9 @@ $media-break-point-computer-small: 1000px;
 $media-break-point-computer-large: 2000px;
 
 $colour-primary: rgb(212, 96, 0);
-$colour-secondary: rgb(79, 55, 97);
+$colour-secondary: #2e1e33;
 $colour-purple: rgb(92, 64, 95);
 $colour-red: rgb(49, 41, 41);
 $colour-green: rgb(55, 116, 97);
-$colour-blue: rgb(61, 72, 102);
+$colour-blue: rgb(84, 101, 128);
 $colour-dark-grey: #333;
