--- a/src/Containers/ProjectsPage/ProjectsPage.module.scss
+++ b/src/Containers/ProjectsPage/ProjectsPage.module.scss
@@ -5,29 +5,14 @@
 }
 
 .landing {
-  min-height: 90vh;
   display: flex;
   flex-direction: column;
   position: relative;
 }
 
-.landing::before {
-  z-index: -1;
-  content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  left: -50vw;
-  bottom: 0;
-  width: 150vw;
-  overflow: hidden;
-  background-color: $colour-red;
-  opacity: 0.75;
-}
-
 .title {
   font-size: 3rem;
-  padding: 3rem 0;
+  padding: 2rem 0 4rem 0;
   position: relative;
   color: #fff;
 }
@@ -38,17 +23,19 @@
   display: block;
   position: absolute;
   top: 0;
-  left: -50vw;
+  left: -10vw;
   bottom: 0;
-  width: 150vw;
-  overflow: hidden;
-  background-color: $colour-red;
+  width: 110vw;
+  background-image: url('./torn-paper.png');
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: cover;
 }
 
 .para {
   margin: 0 0 2rem 0;
   font-size: 1.2rem;
-  color: #fff;
+  color: #222;
   max-width: 65ch;
   margin-bottom: 3rem;
 }
@@ -82,7 +69,7 @@
   label {
     font-family: $font-title;
     font-size: 1.5rem;
-    color: #fff;
+    color: #222;
   }
 }
 
@@ -92,7 +79,7 @@
   padding: 0.5rem 1rem;
   font-size: 1.1rem;
   color: #fff;
-  background-color: $colour-secondary;
+  background-color: $colour-primary;
 }
 
 .filter_labelContainer {
