--- a/src/Containers/ProjectsPage/ProjectPopup/ProjectPopup.module.scss
+++ b/src/Containers/ProjectsPage/ProjectPopup/ProjectPopup.module.scss
@@ -29,9 +29,11 @@
   padding: 0.5rem 1rem 0.5rem 10vw;
   display: flex;
   align-items: center;
+
   img {
     height: 80%;
     margin-left: 1rem;
+    cursor: pointer;
   }
   h1 {
     font-size: 1.5rem;
