--- a/src/_base.scss
+++ b/src/_base.scss
@@ -15,3 +15,4 @@ $colour-red: rgb(49, 41, 41);
 $colour-green: rgb(55, 116, 97);
 $colour-blue: rgb(84, 101, 128);
 $colour-dark-grey: #333;
+$colour-grey: #666;
