--- a/src/Containers/ContactPage/ContactPage.module.scss
+++ b/src/Containers/ContactPage/ContactPage.module.scss
@@ -18,7 +18,7 @@
   font-size: 3rem;
   padding: 2rem 0 4rem 0;
   position: relative;
-  color: #fff;
+  color: #111;
 }
 
 .title::before {
@@ -31,7 +31,7 @@
   bottom: 0;
   width: 110vw;
   overflow: hidden;
-  background-image: url('./torn-paper.png');
+  background-image: url('../../torn-paper.png');
   background-repeat: no-repeat;
   background-position: bottom;
   background-size: cover;
