--- a/src/Containers/ProjectsPage/ProjectsPage.module.scss
+++ b/src/Containers/ProjectsPage/ProjectsPage.module.scss
@@ -14,7 +14,7 @@
   font-size: 3rem;
   padding: 2rem 0 4rem 0;
   position: relative;
-  color: #fff;
+  color: #111;
 }
 
 .title::before {
@@ -26,7 +26,7 @@
   left: -10vw;
   bottom: 0;
   width: 110vw;
-  background-image: url('./torn-paper.png');
+  background-image: url('../../torn-paper.png');
   background-repeat: no-repeat;
   background-position: bottom;
   background-size: cover;
