--- a/src/Containers/TechnicalPage/TechnicalPage.module.scss
+++ b/src/Containers/TechnicalPage/TechnicalPage.module.scss
@@ -10,8 +10,8 @@
 .para {
   font-size: 1.2rem;
   max-width: 60ch;
-  padding: 2rem 0;
-  margin: 0;
+  padding: 0;
+  margin-top: 4rem;
 
   &___dark {
     color: #000;
@@ -42,7 +42,6 @@
 }
 
 .subHeader {
-  margin: 3rem 0 2rem 0;
   font-size: 2rem;
 }
 
@@ -50,26 +49,21 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  margin: 3rem 0;
+  margin: 4rem 0;
+  border-bottom: 1px solid #bbb;
+  padding-bottom: 4rem;
 }
 
 .skills_section {
-  background-color: $colour-primary;
+  background-color: #fff;
   opacity: 0.9;
   box-shadow: 10px 6px 8px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #fff;
+  color: #000;
   padding: 2rem 0;
-
-  &___backEnd {
-    background-color: $colour-dark-grey;
-  }
-
-  &___tools {
-    background-color: $colour-green;
-  }
+  border: 1.5px solid #000;
 
   ul {
     list-style: none;
@@ -89,22 +83,8 @@
 
 .education {
   min-height: 100vh;
-  padding: 3rem 0;
+  padding-bottom: 3rem;
   position: relative;
-}
-
-.education:before {
-  z-index: -1;
-  content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  left: -50vw;
-  bottom: 0;
-  width: 150vw;
-  overflow: hidden;
-  background-color: $colour-red;
-  opacity: 0.2;
 }
 
 .education_cards {
@@ -120,7 +100,6 @@
 @media (min-width: $media-break-point-tablet) {
   .skills {
     flex-direction: row;
-    margin-bottom: 6rem;
   }
 
   .skills_section + .skills_section {
