--- a/src/Containers/ProjectsPage/ProjectsPage.module.scss
+++ b/src/Containers/ProjectsPage/ProjectsPage.module.scss
@@ -33,11 +33,11 @@
 }
 
 .para {
-  margin: 0 0 2rem 0;
+  margin: 4rem 0 4rem 0;
+  padding: 0;
   font-size: 1.2rem;
   color: #222;
   max-width: 65ch;
-  margin-bottom: 3rem;
 }
 
 .cardContainer {
@@ -59,7 +59,6 @@
   justify-content: space-between;
   width: 100%;
   height: 100%;
-  padding: 3rem 0;
 }
 
 .filter_form {
@@ -78,8 +77,8 @@
   margin: 1rem 0 0 0;
   padding: 0.5rem 1rem;
   font-size: 1.1rem;
-  color: #fff;
-  background-color: $colour-primary;
+  color: #000;
+  background-color: #fff;
 }
 
 .filter_labelContainer {
