--- a/src/Containers/ProjectPage/ProjectPage.module.scss
+++ b/src/Containers/ProjectPage/ProjectPage.module.scss
@@ -7,8 +7,7 @@
 }
 
 .title {
-  font-size: 3rem;
-  padding: 2rem 0 4rem 0;
+  padding: 2rem 0 3rem 0;
   position: relative;
   color: #111;
 }
@@ -44,7 +43,7 @@
 }
 
 .mainImg {
-  margin-bottom: 2rem;
+  margin: 2rem 0;
 }
 
 .description {
@@ -71,7 +70,7 @@
 
 @media (min-width: $media-break-point-tablet) {
   .mainImg {
-    margin: 0;
+    margin-bottom: 0;
   }
   .backButton {
     width: 15rem;
