--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,7 @@ body {
   background-attachment: fixed;
   background-repeat: repeat-y;
   background-position: 0px 0px;
+  background-color: #eee;
 }
 
 h1,
@@ -29,6 +30,10 @@ h5,
 h6 {
   margin: 0;
   font-family: $font-title;
+}
+
+h1 {
+  font-size: 3rem;
 }
 
 code {
