--- a/src/Containers/TechnicalPage/TechnicalPage.module.scss
+++ b/src/Containers/TechnicalPage/TechnicalPage.module.scss
@@ -1,5 +1,8 @@
 @import '../../base';
 
+.container {
+  position: relative;
+}
 .landing {
   display: flex;
   flex-direction: column;
@@ -16,29 +19,6 @@
   &___dark {
     color: #000;
   }
-}
-
-.landing_title {
-  font-size: 3rem;
-  padding: 2rem 0 4rem 0;
-  position: relative;
-  color: #111;
-}
-
-.landing_title::before {
-  z-index: -1;
-  content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  left: -10vw;
-  bottom: 0;
-  width: 110vw;
-  overflow: hidden;
-  background-image: url('../../torn-paper.png');
-  background-repeat: no-repeat;
-  background-position: bottom;
-  background-size: cover;
 }
 
 .subHeader {
@@ -83,7 +63,7 @@
 
 .education {
   min-height: 100vh;
-  padding-bottom: 3rem;
+  padding-bottom: 9rem;
   position: relative;
 }
 
