--- a/src/Containers/ProjectPage/ProjectPage.module.scss
+++ b/src/Containers/ProjectPage/ProjectPage.module.scss
@@ -4,27 +4,7 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 4rem;
-}
-
-.title {
-  padding: 2rem 0 3rem 0;
   position: relative;
-  color: #111;
-}
-
-.title::before {
-  z-index: -1;
-  content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  left: -10vw;
-  bottom: 0;
-  width: 110vw;
-  background-image: url('../../torn-paper.png');
-  background-repeat: no-repeat;
-  background-position: bottom;
-  background-size: cover;
 }
 
 .details {
@@ -61,6 +41,7 @@
   width: 100%;
   font-size: 1.2rem;
   transition: background-color 0.2s;
+  margin-bottom: 8rem;
 
   &:hover {
     background-color: $colour-primary;
