--- a/src/Containers/ProjectsPage/ProjectsPage.module.scss
+++ b/src/Containers/ProjectsPage/ProjectsPage.module.scss
@@ -2,34 +2,13 @@
 
 .container {
   padding-bottom: 4rem;
+  position: relative;
 }
 
 .landing {
   display: flex;
   flex-direction: column;
   position: relative;
-}
-
-.title {
-  font-size: 3rem;
-  padding: 2rem 0 4rem 0;
-  position: relative;
-  color: #111;
-}
-
-.title::before {
-  z-index: -1;
-  content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  left: -10vw;
-  bottom: 0;
-  width: 110vw;
-  background-image: url('../../torn-paper.png');
-  background-repeat: no-repeat;
-  background-position: bottom;
-  background-size: cover;
 }
 
 .para {
@@ -48,6 +27,7 @@
   grid-template-rows: auto;
   column-gap: 1.5rem;
   row-gap: 1.5rem;
+  margin-bottom: 8rem;
 }
 
 .filter {
