Updating run command for netlify

--- a/src/Containers/ProjectPage/ProjectPage.module.scss
+++ b/src/Containers/ProjectPage/ProjectPage.module.scss
@@ -16,7 +16,7 @@
 .slide {
   height: 100%;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   img {
     height: 100%;
   }
