Update mobile menu

--- a/src/CSS/_base.scss
+++ b/src/CSS/_base.scss
@@ -16,3 +16,9 @@ $colour-green: rgb(55, 116, 97);
 $colour-blue: rgb(84, 101, 128);
 $colour-dark-grey: #333;
 $colour-grey: #666;
+$colour-light-grey: #eee;
+
+$spacer: 1rem;
+
+$shadow: 8px 8px 10px rgba(0, 0, 0, 0.3);
+$shadow-sm: 2px 2px 4px rgba(0, 0, 0, 0.3);
