--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
-  width: 90vw;
-  margin: auto;
+  min-height: 100vh;
+  position: relative;
 }
+
 .page {
   overflow: hidden;
   min-height: 100vh;
@@ -11,12 +12,4 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-}
-
-@media (min-width: 800px) {
-  .App {
-    width: 80vw;
-    margin: 0 14vw 0 6vw;
-    max-width: 1200px;
-  }
 }
