--- a/src/Components/Footer/Footer.module.scss
+++ b/src/Components/Footer/Footer.module.scss
@@ -1,58 +1,32 @@
-@import '../../base';
+@import '../../CSS/base';
+
+.container {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  background-image: url('./torn-paper_flip.png');
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
+  padding: 2.5rem 0 1rem;
+}
 
 .footer {
-  font-size: 2rem;
-  color: #111;
-  position: relative;
-  padding: 3rem 0 1.5rem 0;
   display: flex;
+  justify-content: flex-end;
   align-items: center;
-  position: absolute;
-  bottom: 0;
+  --gap: 2rem;
 
   a {
-    width: 2rem;
-    height: 2rem;
-  }
-  img {
-    height: 100%;
-    width: 100%;
-  }
-}
-
-.footer > * + * {
-  margin-left: 2rem;
-}
-
-.footer::before {
-  transform: rotate(180deg);
-  z-index: -1;
-  content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  left: -10vw;
-  bottom: 0;
-  width: 110vw;
-  overflow: hidden;
-  background-image: url('../../torn-paper.png');
-  background-repeat: no-repeat;
-  background-position: bottom;
-  background-size: cover;
-}
-
-@media (min-width: $media-break-point-tablet) {
-  .footer {
-    padding: 4rem 0 2rem 0;
-
-    a {
-      opacity: 0.7;
-      transition: all 0.3s;
-
-      &:hover {
-        opacity: 1;
-        transform: scale(1.2);
-      }
+    opacity: 0.7;
+    transition: all 0.3s;
+    &:hover {
+      transform: scale(1.1);
+      opacity: 1;
     }
+  }
+
+  img {
+    height: 2rem;
   }
 }
