--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -1,30 +1,19 @@
-@import '../../base';
+@import '../../CSS/base';
 
 .header {
   font-size: 2rem;
   color: #111;
   position: relative;
   padding: 1.5rem 0 3rem 0;
-  animation: typing 2s ease-out 0s 1;
+  animation: typing 3s ease-in 0s 1;
   overflow: hidden;
   white-space: nowrap;
 }
 
 .container {
   position: relative;
-}
-
-.container::before {
-  z-index: -1;
-  content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  left: -10vw;
-  bottom: 0;
-  width: 110vw;
-  overflow: hidden;
-  background-image: url('../../torn-paper.png');
+  animation: slidedown 0.5s ease-out 0s 1;
+  background-image: url('./torn-paper.png');
   background-repeat: no-repeat;
   background-position: bottom;
   background-size: cover;
@@ -50,6 +39,15 @@
   }
   100% {
     width: 100%;
+  }
+}
+
+@keyframes slidedown {
+  0% {
+    transform: translateY(-50vh);
+  }
+  100% {
+    transform: translateY(0);
   }
 }
 
