--- a/src/Components/ImageCarousel/ImageCarousel.module.scss
+++ b/src/Components/ImageCarousel/ImageCarousel.module.scss
@@ -1,4 +1,4 @@
-@import '../../base';
+@import '../../CSS/base';
 
 .container {
   position: relative;
@@ -42,7 +42,7 @@
   box-sizing: border-box;
   height: 100%;
   max-height: 85vh;
-  object-fit: contain;
+  object-fit: cover;
   flex-shrink: 0;
   transition: all 0.3s;
 }
