--- a/src/Components/NavList/NavItem/NavItem.module.scss
+++ b/src/Components/NavList/NavItem/NavItem.module.scss
@@ -15,6 +15,7 @@
   transition-duration: 0.5s;
   margin-top: 1rem;
   box-shadow: $shadow;
+  border: 1.5px solid $colour-dark-grey;
 
   img {
     height: 3rem;
