--- a/src/Containers/MobileNav/MobileNav.module.scss
+++ b/src/Containers/MobileNav/MobileNav.module.scss
@@ -11,7 +11,8 @@
   position: fixed;
   right: 15px;
   top: 15px;
-  background-color: $colour-dark-grey;
+  background-color: $colour-light-grey;
+  border: 1.5px solid $colour-dark-grey;
   border-radius: 10000px;
   box-shadow: $shadow-sm;
 }
@@ -26,7 +27,7 @@
     border-radius: 1000px;
     width: 2rem;
     height: 2px;
-    background-color: white;
+    background-color: black;
   }
   :nth-child(1) {
     position: absolute;
