--- a/src/Containers/AboutPage/AboutPage.module.scss
+++ b/src/Containers/AboutPage/AboutPage.module.scss
@@ -56,7 +56,7 @@
 .profile {
   width: 15rem;
   height: 15rem;
-  border: 1px solid #000;
+  box-shadow: $shadow;
   border-radius: 50%;
   background-color: #fff;
   object-fit: cover;
