--- a/src/index.scss
+++ b/src/index.scss
@@ -18,7 +18,14 @@ body {
   background-image: url('./background.png');
   background-attachment: fixed;
   background-repeat: repeat-y;
-  background-position: 0px 0px;
+  background-position: 100% 0;
+  background-size: 200%;
+}
+
+@media (min-width: $media-break-point-computer-small) {
+  body {
+    background-size: 100%;
+  }
 }
 
 h1,
