--- a/src/Components/NavList/NavItem/NavItem.module.scss
+++ b/src/Components/NavList/NavItem/NavItem.module.scss
@@ -5,7 +5,8 @@
   display: flex;
   width: 100vw;
   height: 4rem;
-  background-color: $colour-primary;
+  background-color: white;
+  border: 1.5px solid black;
   border-radius: 0.5rem 0 0 0.5rem;
   align-items: center;
   justify-content: felx-start;
@@ -20,12 +21,14 @@
     height: 3rem;
     width: 3rem;
     margin-left: 1rem;
+
+    filter: brightness(0.7);
   }
 
   p {
     font-size: 1.3rem;
     margin-right: 1rem;
-    color: white;
+    color: black;
     font-family: $font-title;
   }
 }
@@ -36,6 +39,9 @@
 
 .active {
   background-color: $colour-secondary;
+  img {
+    filter: brightness(1);
+  }
   p {
     color: #fff;
   }
