--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -19,7 +19,7 @@
 
 .icon {
   position: absolute;
-  filter: brightness(0.95);
+  filter: invert(90%);
   top: 0;
   left: 0;
   transform: rotate(-30deg);
