Update project cards

--- a/src/CSS/_base.scss
+++ b/src/CSS/_base.scss
@@ -12,6 +12,8 @@ $colour-primary: #f39c12;
 $colour-primary-filter: invert(70%) sepia(30%) saturate(3970%)
   hue-rotate(355deg) brightness(90%) contrast(91%);
 $colour-secondary: #2e1e33;
+$colour-secondary-filter: invert(9%) sepia(36%) saturate(878%)
+  hue-rotate(241deg) brightness(98%) contrast(89%);
 $colour-purple: rgb(92, 64, 95);
 $colour-red: rgb(49, 41, 41);
 $colour-green: rgb(55, 116, 97);
