--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -25,7 +25,7 @@
   transform: rotate(-30deg);
   height: 100vh;
   width: 100vh;
-  animation: slidedown 0.5s ease-out 0s 1;
+  animation: roll-in 1.3s ease-out 0s 1;
 }
 
 .blink {
@@ -51,9 +51,9 @@
   }
 }
 
-@keyframes slidedown {
+@keyframes roll-in {
   0% {
-    transform: translateX(-50vw) rotate(0deg);
+    transform: translateX(-50vw) rotate(110deg);
   }
   100% {
     transform: translateX(0) rotate(330deg);
