--- a/src/Containers/AboutPage/AboutPage.module.scss
+++ b/src/Containers/AboutPage/AboutPage.module.scss
@@ -7,12 +7,12 @@
   align-items: center;
   height: 100%;
   padding: 4rem 0;
-  &_para {
+  p {
     color: #666;
     font-size: 1.3rem;
     font-family: $font-title;
     font-style: italic;
-    margin-bottom: 3rem;
+    margin-top: 2rem;
     max-width: 40ch;
   }
 }
@@ -30,6 +30,10 @@
   font-size: 1.1rem;
   max-width: 60ch;
   width: 100%;
+}
+
+.section_paragraph > * + * {
+  margin-top: 1rem;
 }
 
 .section_images {
