Update backgrounds on project and skill cards

--- a/src/CSS/_base.scss
+++ b/src/CSS/_base.scss
@@ -29,8 +29,8 @@ $shadow-sm: 2px 2px 4px rgba(0, 0, 0, 0.3);
 
 $background-gradient: linear-gradient(
   -45deg,
-  rgb(180, 180, 180) 0%,
-  rgba(255, 255, 255, 1) 40%,
-  rgba(255, 255, 255, 1) 60%,
-  rgb(180, 180, 180) 100%
+  rgba(180, 180, 180, 0.7) 0%,
+  rgba(255, 255, 255, 0.7) 40%,
+  rgba(255, 255, 255, 0.7) 60%,
+  rgba(180, 180, 180, 0.7) 100%
 );
