--- a/src/Components/SkillsCard/SkillCard.module.scss
+++ b/src/Components/SkillsCard/SkillCard.module.scss
@@ -5,6 +5,7 @@
   background: $background-gradient;
   padding: 2rem;
   border-radius: 0.5rem;
+  box-shadow: inset 0 0 10px #bbb;
 }
 
 .technology {
