--- a/src/Components/ProjectCard/ProjectCard.module.scss
+++ b/src/Components/ProjectCard/ProjectCard.module.scss
@@ -4,6 +4,7 @@
   border-radius: 0.5rem;
   padding: 2rem;
   background: $background-gradient;
+  box-shadow: inset 0 0 10px #bbb;
   display: grid;
   grid-template-areas:
     'gif '
